# chess2

./: .gitignore  Makefile  Readme.md  io_utils.py  main.py  mains.py  pyproject.toml  test.ipynb
