[tool.poetry]
name = "chess-2"
version = "0.1.0"
description = ""
authors = ["csrinesh <csrinesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chess = "^1.11.1"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
